<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_bar_remove_location"
        app:showAsAction="ifRoom"
        android:title="@string/remove"/>

    <item android:id="@+id/action_bar_start_animation"
        app:showAsAction="ifRoom"
        android:title="@string/start_animation"/>

    <item android:id="@+id/action_bar_stop_animation"
        app:showAsAction="ifRoom"
        android:title="@string/stop_animation"/>

    <item android:id="@+id/action_bar_clear_locations"
        app:showAsAction="ifRoom"
        android:title="@string/clear_markers"/>

    <item android:id="@+id/action_bar_add_default_locations"
        app:showAsAction="ifRoom"
        android:title="@string/add_default_locations"/>

    <item android:id="@+id/action_bar_toggle_style"
        app:showAsAction="ifRoom"
        android:title="@string/toggle_style"/>

</menu>