<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/evContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/action_bar_remove_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove" />

        <Button
            android:id="@+id/action_bar_add_default_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_default_locations" />

        <Button
            android:id="@+id/action_bar_start_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_animation" />

        <Button
            android:id="@+id/action_bar_stop_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_animation" />

        <Button
            android:id="@+id/action_bar_clear_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_markers" />

        <Button
            android:id="@+id/action_bar_toggle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/toggle_style" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/evContainer"
        tools:context="com.durbinlabs.googlemapmarkeranimation.MapsActivity" />
</RelativeLayout>
